@@ -63,8 +63,6 @@
 
 (setq |$localVars| ())  ;checked by isType
 
-(setq identity #'identity) ;to make LispVM code for handling constants to work
-
 ;; For the browser, used for building local databases when a user compiles
 ;; their own code.
 (SETQ |$newConstructorList| nil)
