@@ -1,4 +1,9 @@
-2017-01-24  Martin Baker
+2017-01-24  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
+	* src/interp/scan.boot, src/interp/setq.lisp,
+	src/lisp/primitives.lisp: Fix build with sbcl-1.3.13
+
+2017-01-24  Martin Baker  <ax87438@martinb.com>
   
 	* src/algebra/gpresent.spad: Add Todd-Coxeter algorithm
 
